# PK2PaletteUtility

./: CMakeLists.txt  README.md
res/: resources.qrc  resources.rc
src/: main.cpp
src/colorchooser/: ColorChooser.cpp  ColorChooser.h  ColorComponent.h  ColorSelectionBar.cpp  ColorSelectionBar.h
src/ui/: ImageView.cpp  ImageView.h  MainMenuBar.cpp  MainMenuBar.h  PK2PaletteUtility.cpp  PK2PaletteUtility.h  PaletteRenderer.cpp  PaletteRenderer.h  PaletteViewWidget.cpp  PaletteViewWidget.h
src/undo/: ColorsChangeCommand.cpp  ColorsChangeCommand.h  UndoAction.h
src/utils/: PaletteFileParser.cpp  PaletteFileParser.h  PaletteUtils.h
